--- a/Vagrantfile.sample
+++ b/Vagrantfile.sample
@@ -3,17 +3,17 @@
 
 Vagrant::Config.run do |config|
 
-  config.vm.box = "ubuntuserver"
+  config.vm.box = "boxname"
   config.ssh.username = "ubuntu"
-  config.ssh.private_key_path = "/Users/weldyss/.ssh/id_rsa"
+  config.ssh.private_key_path = "#{ENV['HOME']}/.ssh/id_rsa"
 
   # Exemplifying two virtual environments
-  config.vm.define :scoola do |local_config|
+  config.vm.define :vm1 do |local_config|
     local_config.vm.network :hostonly, "10.55.55.10"
     local_config.vm.forward_port 22, 2222
   end
 
-  config.vm.define :nwsoft do |local_config|
+  config.vm.define :vm2 do |local_config|
     local_config.vm.network :hostonly, "10.55.55.11"
     local_config.vm.forward_port 22, 2223
     local_config.vm.forward_port 80, 8081
